--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"node": ">=16"
 	},
 	"scripts": {
+		"compile-fast": "compact compile +0.27.0 --skip-zk contract/game.compact go-fish",
 		"compile": "compact compile +0.27.0 contract/game.compact go-fish",
 		"build": "tsc",
 		"start": "npm run build && node dist/cli.js",
@@ -23,7 +24,7 @@
 	},
 	"devDependencies": {
 		"@sindresorhus/tsconfig": "^3.0.1",
-		"@types/react": "^18.0.32",
+		"@types/react": "^18.3.27",
 		"@vdemedes/prettier-config": "^2.0.1",
 		"ava": "^5.2.0",
 		"chalk": "^5.2.0",
